Fix bio spacing

--- a/static/style.css
+++ b/static/style.css
@@ -79,6 +79,7 @@ main {
     align-self: center;
     width: 50%;
     text-align: justify;
+    margin: 0.8em 0;
 }
 
 hr {
